; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_vidsoft.c_VIDSoftVdp1DrawStartBody.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_vidsoft.c_VIDSoftVdp1DrawStartBody.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32 }

@vdp1interlace = common dso_local global i32 0, align 4
@vdp1width = common dso_local global i32 0, align 4
@vdp1height = common dso_local global i32 0, align 4
@vdp1pixelsize = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @VIDSoftVdp1DrawStartBody(%struct.TYPE_4__* %0, i32* %1) #0 {
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i32*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %6 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = and i32 %7, 8
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %2
  store i32 2, i32* @vdp1interlace, align 4
  br label %12

11:                                               ; preds = %2
  store i32 1, i32* @vdp1interlace, align 4
  br label %12

12:                                               ; preds = %11, %10
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = and i32 %15, 1
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %27

18:                                               ; preds = %12
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = and i32 %21, 2
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %25

24:                                               ; preds = %18
  store i32 512, i32* @vdp1width, align 4
  store i32 512, i32* @vdp1height, align 4
  br label %26

25:                                               ; preds = %18
  store i32 1024, i32* @vdp1width, align 4
  store i32 256, i32* @vdp1height, align 4
  br label %26

26:                                               ; preds = %25, %24
  store i32 1, i32* @vdp1pixelsize, align 4
  br label %28

27:                                               ; preds = %12
  store i32 512, i32* @vdp1width, align 4
  store i32 256, i32* @vdp1height, align 4
  store i32 2, i32* @vdp1pixelsize, align 4
  br label %28

28:                                               ; preds = %27, %26
  %29 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %30 = load i32*, i32** %4, align 8
  %31 = call i32 @VIDSoftVdp1EraseFrameBuffer(%struct.TYPE_4__* %29, i32* %30)
  ret void
}

declare dso_local i32 @VIDSoftVdp1EraseFrameBuffer(%struct.TYPE_4__*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
